task_oop_prac_week5
dengan kodingan statistika sederhana kemaren, yang kemudian diterapkan konsep enkapsulasi

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,14 @@
 /week1/build/
 /week2/nbproject/private/
 /week2/build/
+/week3/nbproject/private/
+/week3/build/
+/oop_lesson_w4/nbproject/private/
+/oop_lesson_w4/build/
+/week4_prac_oop_lesson/nbproject/private/
+/week4_prac_oop_lesson/build/
+/b4class_week5/nbproject/private/
+/b4prac_week5/nbproject/private/
+/b4prac_week5/build/
+/stastik/nbproject/private/
+/stastik/build/
